Promote known-good working state

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ twitch:
   client_secret: ${TWITCH_CLIENT_SECRET}
 
 discord:
-  system_webhook: ${DISCORD_SYSTEM_WEBHOOK}
+  system_webhook: ${DISCORD_WEBHOOK_SYSTEM}
   characters:
     "loop.trace": ${DISCORD_WEBHOOK_LOOP_TRACE}
     "packet.ghost": ${DISCORD_WEBHOOK_PACKET_GHOST}
@@ -27,3 +27,23 @@ channels:
   - login: jadobe
   - login: jessabelle1998
   - login: reynysunset
+
+#Discord comments settings
+
+quotes:
+enabled: true
+quotes_dir: quotes
+daily_min: 1
+daily_max: 3
+window_start: "10:00"
+window_end: "21:00"
+max_sentences: 3
+max_chars: 350
+no_links: true
+no_mentions: true
+files:
+  "loop.trace": "loop.trace.txt"
+  "packet.ghost": "packet.ghost.txt"
+  "[REDACTED]": "redacted.txt"
+  "aux.proc": "aux.proc.txt"
+
